fix: button overflowing cookie banner on mobile screen

--- a/src/theme/scss/components/_cookie-banner-component.scss
+++ b/src/theme/scss/components/_cookie-banner-component.scss
@@ -6,7 +6,7 @@
   position: fixed;
   bottom: 0;
   right: 0;
-  z-index: 10;
+  z-index: 999;
 
   @include mobile {
     height: 120px;
